test/typecheck/y_error_16.j.gold
test/y_error_16.j:5:9: error: local variable 'a' has invalid type 'Void'
   |
 5 |     Void a;
   |     ^
